Use Java 17 style